<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/receivingFreqText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        tools:text="@string/receivingFreqText" />

    <EditText
        android:id="@+id/receivingFreqEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/receivingFreqText"
        android:hint="@string/receivingFreqEdit"
        android:inputType="numberSigned"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/decibelDiffText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/receivingFreqEdit"
        tools:text="@string/decibelDiffText" />

    <EditText
        android:id="@+id/decibelDiffEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/decibelDiffText"
        android:hint="@string/decibelDiffEdit"
        android:inputType="numberSigned"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/SpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/decibelDiffEdit"
        tools:text="@string/SpText" />

    <EditText
        android:id="@+id/SpEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/SpText"
        android:hint="@string/SpEdit"
        android:inputType="numberSigned"
        android:textSize="12sp" />

    <Switch
        android:id="@+id/receivingSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/SpEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textOn="@string/playing"
        android:textOff="@string/stopped" />

</android.support.constraint.ConstraintLayout>